--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer base {
+  body {
+    @apply font-secondary text-secondary leading-relaxed;
+  }
+  h1, h2, h3, h4, h5, h6 {
+    @apply text-primary font-primary;
+  }
+
+  .h1 {
+    @apply text-[70px] xl:text-[150px] leading-[1.1] font-semibold;
+  }
+  .h2 {
+    @apply text-[56px] xl:text-[80px] leading-[1.2] font-bold;
+  }
+  .lead {
+    @apply text-lg;
+  }
+  .btn {
+    @apply min-w-[156px] h-[54px] px-6 bg-accent hover:bg-accent-hover text-primary text-[13px] uppercase font-semibold tracking-[.15em] transition-all;
+  }
 }
